@@ -1013,6 +1013,9 @@
     <ClInclude Include="Include\core\KgeCond.h">
       <Filter>Include Files\core</Filter>
     </ClInclude>
+    <ClInclude Include="Include\core\TSQueue.h">
+      <Filter>Include Files\core</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="ReadMe.txt" />
